# ManageStudents

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CMake-Ninja.yml
include/: app.h
include/class1/: Student.h
include/module1/: ManageStudents.h
libs/: CMakeLists.txt  README.md
libs/headers/: library1.h
libs/src/: library1.cpp
src/: app.cpp  main.cpp
src/class1/: Student.cpp
src/module1/: ManageStudents.cpp
tests/: CMakeLists.txt  README.md
tests/integration/: CMakeLists.txt
tests/performance/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/class1/: students_constructor_tests.cpp  students_function_tests.cpp
